# mofgraph2vec

./: .gitignore  Notice  README.md  environment.yml  pyproject.toml  setup.cfg
conf/: config.yaml
conf/data/: data.yaml  nn.yaml
conf/doc2label_data/: application.yaml  arc.yaml  default.yaml  qmof.yaml  rsm.yaml
conf/doc2label_model/: deep.yaml  ensemble.yaml
conf/model/: gensim.yaml  nn.yaml  sklearn.yaml
conf/mof2vec_data/: application.yaml  data.yaml  qmof.yaml
conf/mof2vec_model/: gensim.yaml
conf/supervised_sweep/: nn.yaml
conf/sweep/: default.yaml  doc2label.yaml  ensemble.yaml  gensim.yaml  mof2vec.yaml  sklearn.yaml  workflow.yaml
conf/trainer/: default.yaml
conf/unsupervised_sweep/: gensim.yaml
data/: qmof-describe-keys.txt
data/density/: qmof-density.csv  rsm-density.csv
data/md_xq/: md_cifs_co2_final.csv  md_n2_henry.csv
dev/: application_recommendation.ipynb  ch4_storage.ipynb  clustering.ipynb  core_by_year.ipynb  data_preparation.ipynb  dev.ipynb  dev_nn.ipynb  doc2vec_regression.ipynb  embedding.ipynb  embedding_analyser.ipynb  example.ipynb  final_investigation.ipynb  fragments.py  gensim.ipynb  graph2vec.py  mofid.ipynb  neural_network.ipynb  new_data_xq.ipynb  parityplot_0408.ipynb  parityplot_nov17.ipynb  sanity_check.ipynb  sound_test.py  sweep_smi.py  task-emb-com.ipynb  tpa.ipynb  unsupervised_load.ipynb
documents/: hyperparameters.numbers  todo
example_data/: example_geometry.csv  example_regression.csv
experiments/: sweep.py  train.py
plots/: README.md
results/: hyperparameters.numbers
(+216 files in other folders)
